# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2004-07-21(Wed) 00:57:44 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : part only from own nick when server
	disconnect


2004-07-20(Tue) 11:33:46 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.2 release

	* ndk_version.rb : 0.6.3


2004-07-20(Tue) 04:06:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_client.rb : use NdkCommandDescription to list
	items

	* ndk_config.rb(identical_channel_name) : add euc-jp option to regexp


2004-07-20(Tue) 02:23:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/sixamo.nb : change talk ratio algorithm


2004-07-20(Tue) 02:23:35 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/sixamo.nb : fix talk ratio algorithm


2004-07-20(Tue) 02:18:01 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/sixamo.nb : down talk rate and memorize his
	talk


2004-07-20(Tue) 02:00:45 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_logger.rb : synchronize IO object output


2004-07-20(Tue) 01:48:45 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix invoke time event timing


2004-07-20(Tue) 00:37:02 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : add @pong_fail_count and MAX_PONG_FAIL
	to check server response

	* ndk_client.rb : fix usage 100% problem(remove Thread.pass
	and ignore message when server connection is closed)


2004-07-19(Mon) 22:10:05 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.1 releaseds

	* ndk_version.rb : 0.6.2


2004-07-19(Mon) 21:52:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : TimerIntervalSec to 60


2004-07-19(Mon) 21:40:17 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk_manager.rb : fix time thread timing

	* ndk_manager.rb : fix SIGINT hook

	* ndk_version.rb : remove debug code


2004-07-19(Mon) 21:00:21 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.6.0 released

	* ndk_version.rb : 0.6.1


2004-07-19(Mon) 20:59:11 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/mailcheck.nb : updated from